--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "flux-easy-loader-test",
+    "name": "h5-actionbar",
     "version": "0.0.0",
     "description": "",
     "main": "index.js",
