--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-    "name": "h5-actionbar",
-    "version": "0.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "node node_modules/h5-test/bin/run"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "react": "^0.13.3"
-    },
-    "devDependencies": {
-        "autoprefixer-loader": "^2.0.0",
-        "css-loader": "^0.14.4",
-        "flowcheck": "^0.2.7",
-        "flowcheck-loader": "^1.0.0",
-        "jsx-loader": "^0.13.2",
-        "less-loader": "^2.2.0",
-        "h5-test": "latest",
-        "style-loader": "^0.12.3"
-    }
+  "name": "h5-actionbar",
+  "version": "0.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "node node_modules/h5-test/bin/run"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "react": "^0.13.3"
+  },
+  "devDependencies": {
+    "autoprefixer-loader": "^2.0.0",
+    "css-loader": "^0.14.4",
+    "flowcheck": "^0.2.7",
+    "flowcheck-loader": "^1.0.0",
+    "galenframework-cli": "^2.0.3",
+    "h5-test": "latest",
+    "jsx-loader": "^0.13.2",
+    "less-loader": "^2.2.0",
+    "style-loader": "^0.12.3"
+  }
 }
