--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "h5-dropdown": "0.0.1",
+    "h5-menudropdown": "0.0.1"
   },
   "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
