--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "h5-actionbar",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "./src/actionbar.js",
   "scripts": {
     "test": "node node_modules/h5-test/bin/run"
   },
